--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "firebase": "^8.3.1",
     "movie-trailer": "^2.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-redux-firebase": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-youtube": "^7.13.1",
+    "redux": "^4.0.5",
+    "redux-firestore": "^0.15.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
