--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-youtube": "^7.13.1",
     "redux": "^4.0.5",
     "redux-firestore": "^0.15.0",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
